# clipboard-next

./: Cargo.toml  README.md
examples/: buffer.rs  files.rs  helloworld.rs  image.rs  multi.rs  watch_change.rs
src/: common.rs  lib.rs
src/platform/: win.rs  x11.rs
tests/: file_test.rs  image_test.rs  performance_test.rs  string_test.rs
